# mixed-in-p

./: .gitignore  BUILD.md  CLAUDE.md  LICENSE  README.md  SIGNING-AND-NOTARIZATION.md  TRANSLATIONS.md  index.html  installer.iss  mixedinp.spec  pyproject.toml  requirements.txt  run_app.command  run_app.sh
docs/: diagrams.md  index.html  user-guide.html  user-guide.md  visualizations-plan.md
resources/: icon.icns
scripts/: build_translations.py  make_dmg_background.py
src/: __init__.py  cli.py  main.py
src/analysis/: __init__.py  analyzer.py  bpm_detector.py  energy_detector.py  history.py  key_detector.py  keycode.py  result.py
src/conversion/: __init__.py  converter.py  result.py
src/gui/: __init__.py  __main__.py  app.py  main_window.py  window_sizer.py
src/gui/models/: __init__.py  state.py  track_model.py
src/gui/resources/: __init__.py
src/gui/styles/: __init__.py  app.qss.template  theme.py
src/metadata/: __init__.py  tags.py
src/renamer/: __init__.py  history.py  operations.py  preview.py
src/utils/: app_dirs.py  config.py  export.py  i18n.py  reveal.py
tests/: __init__.py  test_analysis_history.py  test_analyzer.py  test_bpm_detector.py  test_cli_convert.py  test_config_history_limit.py  test_export.py  test_history_panel_sort.py  test_key_detector.py  test_keycode.py  test_metadata.py  test_renamer.py  test_reveal.py
tests/gui/: README.md  conftest.py  test_history_panel_export.py  test_history_panel_highlight.py  test_history_panel_limit.py  test_history_panel_reveal.py  test_history_panel_selection.py  test_history_panel_sorting.py
(+65 files in other folders)
